--- a/resources/webview/css/index.css
+++ b/resources/webview/css/index.css
@@ -1,8 +1,50 @@
 html,
 body {
     background-color: #fff;
+    padding: 0px;
 }
 
-h1 {
-    color: #000
+.webview-title {
+    line-height: 36px;
+    padding: 10px 10px;
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+}
+
+.webview-title::after {
+    content: "";
+    position: absolute;
+    left: 10px;
+    bottom: 0px;
+    width: calc(100% - 20px);
+    height: 1px;
+    background: #eaeefb;
+}
+
+.webview-title .webview-title-text {
+    color: #000;
+    font-size: 24px;
+    font-weight: 600;
+    font-family: "微软雅黑";
+}
+
+.webview-title .webview-title-search {
+    -webkit-appearance: none;
+    background-color: #fff;
+    background-image: none;
+    border-radius: 4px;
+    border: 1px solid #dcdfe6;
+    box-sizing: border-box;
+    color: #606266;
+    display: inline-block;
+    font-size: inherit;
+    outline: none;
+    padding: 0 15px;
+    transition: border-color .2s cubic-bezier(.645, .045, .355, 1);
+    cursor: pointer;
+}
+
+.webview-service {
+    display: none;
 }
