--- a/resources/webview/css/index.css
+++ b/resources/webview/css/index.css
@@ -30,7 +30,12 @@ body {
 }
 
 .webview-title .webview-title-search {
+    /* 标准属性 */
+    appearance: none;
+    /* Safari / Chrome */
     -webkit-appearance: none;
+    /* Firefox */
+    -moz-appearance: none;
     background-color: #fff;
     background-image: none;
     border-radius: 4px;
