--- a/resources/webview/css/index.css
+++ b/resources/webview/css/index.css
@@ -49,6 +49,13 @@ body {
     transition: border-color .2s cubic-bezier(.645, .045, .355, 1);
     cursor: pointer;
 }
+.webview-shell .table-shell{
+    color: #000;
+    border: 1px solid #f0f0f0;
+}
+.webview-shell .table-shell .table-shell-thead{
+    background:#f2f2f2;
+}
 
 .webview-service {
     display: none;
