--- a/resources/webview/css/index.css
+++ b/resources/webview/css/index.css
@@ -3,145 +3,9 @@ body {
     background-color: #fff;
     padding: 0px;
 }
-
-.webview-title {
-    line-height: 36px;
-    padding: 10px 10px;
-    position: relative;
-    display: flex;
-    justify-content: space-between;
+.webview-menu .el-tabs__header.is-top{
+    margin-bottom:0px;
 }
-
-.webview-title::after {
-    content: "";
-    position: absolute;
-    left: 10px;
-    bottom: 0px;
-    width: calc(100% - 20px);
-    height: 1px;
-    background: #eaeefb;
-}
-
-.webview-title .webview-title-text {
-    color: #000;
-    font-size: 24px;
-    font-weight: 600;
-    font-family: "微软雅黑";
-}
-
-.webview-title .webview-title-search {
-    /* 标准属性 */
-    appearance: none;
-    /* Safari / Chrome */
-    -webkit-appearance: none;
-    /* Firefox */
-    -moz-appearance: none;
-    background-color: #fff;
-    background-image: none;
-    border-radius: 4px;
-    border: 1px solid #dcdfe6;
-    box-sizing: border-box;
-    color: #606266;
-    display: inline-block;
-    font-size: inherit;
-    outline: none;
-    padding: 0 15px;
-    transition: border-color .2s cubic-bezier(.645, .045, .355, 1);
-    cursor: pointer;
-}
-.webview-shell .table-shell{
-    color: #000;
-    border: 1px solid #f0f0f0;
-    border-collapse: collapse;
-}
-.webview-shell .table-shell .table-shell-thead{
-    background:#f2f2f2;
-}
-.webview-shell .table-shell .table-shell-tbody tr td{
-    border-bottom:1px solid #f0f0f0;
-    border-right:1px solid #f0f0f0;
-    padding:5px;
-}
-.webview-shell .table-shell .table-shell-tbody tr td.table-shell-code{
-    font-size:12px;
-}
-.webview-shell .table-shell .table-shell-tbody tr td.table-shell-code > span{
-    display: flex;
-    padding: 3px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    align-items: center;
-    width: fit-content;
-}
-.webview-shell .table-shell .table-shell-tbody tr td.table-shell-code > span:hover{
-    color:#0581f3;
-    cursor:default;
-}
-.webview-shell .table-shell .table-shell-tbody tr td .run-code{
-    border-color: transparent;
-    color: #409eff;
-    background: transparent;
-    padding-left: 0;
-    padding-right: 0;
-    display: inline-block;
-    line-height: 1;
-    white-space: nowrap;
-    cursor: pointer;
-    -webkit-appearance: none;
-    text-align: center;
-    box-sizing: border-box;
-    outline: none;
-    margin: 0;
-    transition: .1s;
-    font-weight: 500;
-}
-.webview-service {
-    display: none;
-}
-
-.floating-menu {
-  position: fixed;
-  bottom: 40px;
-  right: 40px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 12px;
-  z-index:1000;
-}
-
-.ball {
-  width: 48px;
-  height: 48px;
-  background: #fff;
-  border-radius: 50%;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 20px;
-}
-
-.main-btn {
-  background: #fff;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  overflow: hidden;
-  padding: 0 8px;
-  font-size: 20px;
-  cursor: pointer;
-}
-
-.collapsed-icon {
-  transition: opacity 0.3s;
-}
-
-.expanded-icons {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  width: 100%;
-  transition: opacity 0.3s;
+.webview-menu .el-tabs__header.is-top .el-tabs__nav-scroll{
+    padding:0 32px;
 }
